--- a/WebContent/templatemo_style.css
+++ b/WebContent/templatemo_style.css
@@ -246,6 +246,9 @@ img {
 #templatemo_content #content_right {
 	float: right;
 	width: 650px;
+	overflow-y: auto;
+     height: 320px; 
+	
 }
 
 .header_01 {
@@ -297,7 +300,7 @@ img {
 	color: #FFF;
 	font-weight: bold;
 	width: 230px;
-	height: 37px;
+	height: 50px;
 	padding: 8px 0 0 30px;
 	background: url(images/templatemo_left_col_header_bg.jpg) no-repeat;
 }
@@ -557,6 +560,7 @@ table.table2 td {
 	font-size:16px;
 	
 }
+
 #scrollable {
     height: 200px; /* or any value */
     overflow-y: auto;
@@ -582,8 +586,6 @@ table.table2 td {
 	color: black;
 	font-size:16px;
 }
-
-
 
 
 
